# better-resume

./: .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  job_researcher.py  resume_updater_agent.py
html-resume/: resume.html
html_resume_template/: resume.html  style.css
prompts/: updater.py
tools/: __init__.py  apply_diff.py  generate_resume_markdown.py  read_existing_resume.py  read_file.py  read_resume_markdown.py  save_research_result.py  save_updated_resume.py  scraper.py
utils/: verbose.py
workflows/: render_resume.py  update_resume_workflow.py  workflow.py
